--- a/index.html
+++ b/index.html
@@ -565,46 +565,46 @@ html[data-theme="dark"] .aud-btn.active {
 <div id="standardsMenu" class="dropdown-content standards-menu">
 
   <div class="dropdown-header">NOVAK Standards (SP-1 → SP-9)</div>
-  <a href="standards/SP-1 — NOVAK Execution Integrity Standard (Full GitHub-Ready Document).pdf" target="_blank">SP-1 — Execution Integrity</a>
-  <a href="standards/SP-2 — HVET EIR RGAC Cryptographic Standard.pdf" target="_blank">SP-2 — HVET / EIR / RGAC</a>
-  <a href="standards/SP-3 — Safety Gate + PL-X + PS-X Standard.pdf" target="_blank">SP-3 — Safety Gate + PL-X</a>
-  <a href="standards/SP-4 — NOVAK Implementation Requirements.pdf" target="_blank">SP-4 — Implementation Spec</a>
-  <a href="standards/SP-5 — NOVAK CERTIFICATION STANDARD.pdf" target="_blank">SP-5 — Certification Model</a>
-  <a href="standards/SP-6 — NOVAK Conformance Testing Suite.pdf" target="_blank">SP-6 — Conformance Levels</a>
-  <a href="standards/SP-7 — NOVAK Federal Adoption & Compliance Guide.pdf" target="_blank">SP-7 — Federal Adoption</a>
-  <a href="standards/SP-8 — NOVAK Interoperability & Integration Standard.pdf" target="_blank">SP-8 — Interoperability</a>
-  <a href="standards/SP-9 — NOVAK Federal Multi-Agency Deployment Standard.pdf" target="_blank">SP-9 — Multi-Domain Compliance</a>
+  <a href="docs/standards/SP-1 — NOVAK Execution Integrity Standard (Full GitHub-Ready Document).pdf" target="_blank">SP-1 — Execution Integrity</a>
+  <a href="docs/standards/SP-2 — HVET EIR RGAC Cryptographic Standard.pdf" target="_blank">SP-2 — HVET / EIR / RGAC</a>
+  <a href="docs/standards/SP-3 — Safety Gate + PL-X + PS-X Standard.pdf" target="_blank">SP-3 — Safety Gate + PL-X</a>
+  <a href="docs/standards/SP-4 — NOVAK Implementation Requirements.pdf" target="_blank">SP-4 — Implementation Spec</a>
+  <a href="docs/standards/SP-5 — NOVAK CERTIFICATION STANDARD.pdf" target="_blank">SP-5 — Certification Model</a>
+  <a href="docs/standards/SP-6 — NOVAK Conformance Testing Suite.pdf" target="_blank">SP-6 — Conformance Levels</a>
+  <a href="docs/standards/SP-7 — NOVAK Federal Adoption & Compliance Guide.pdf" target="_blank">SP-7 — Federal Adoption</a>
+  <a href="docs/standards/SP-8 — NOVAK Interoperability & Integration Standard.pdf" target="_blank">SP-8 — Interoperability</a>
+  <a href="docs/standards/SP-9 — NOVAK Federal Multi-Agency Deployment Standard.pdf" target="_blank">SP-9 — Multi-Domain Compliance</a>
 
   <div class="dropdown-divider"></div>
 
   <div class="dropdown-header">Threat Models (NTM-1 → NTM-3)</div>
-  <a href="threat-models/NTM-1 — NOVAK THREAT MODEL.pdf" target="_blank">NTM-1 — Base Threat Model</a>
-  <a href="threat-models/NTM-2 — NOVAK Red Team Adversarial Test Suite.pdf" target="_blank">NTM-2 — Red Team Test Suite</a>
-  <a href="threat-models/NTM-3 — NOVAK Adversarial AI Test Suite.pdf.pdf" target="_blank">NTM-3 — Adversarial Model</a>
-  <a href="threat-models/NTM-3 — NOVAK Adversarial AI Test Suite (Full Formal Edition).pdf" target="_blank">NTM-3 — Adversarial Model</a>
+  <a href="docs/threat-models/NTM-1 — NOVAK THREAT MODEL.pdf" target="_blank">NTM-1 — Base Threat Model</a>
+  <a href="docs/threat-models/NTM-2 — NOVAK Red Team Adversarial Test Suite.pdf" target="_blank">NTM-2 — Red Team Test Suite</a>
+  <a href="docs/threat-models/NTM-3 — NOVAK Adversarial AI Test Suite.pdf.pdf" target="_blank">NTM-3 — Adversarial Model</a>
+  <a href="docs/threat-models/NTM-3 — NOVAK Adversarial AI Test Suite (Full Formal Edition).pdf" target="_blank">NTM-3 — Adversarial Model</a>
 
   <div class="dropdown-divider"></div>
 
   <div class="dropdown-header">Whitepapers</div>
-  <a href="whitepapers/PART_1__Executive_Summary.pdf" target="_blank">PART 1 — Executive Summary</a>
-  <a href="whitepapers/PART 2 — WHAT NOVAK IS.pdf" target="_blank">PART 2 — What NOVAK Is</a>
-  <a href="whitepapers/PART 3 — SCIENTIFIC FOUNDATIONS OF THE NOVAK PROTOCOL.pdf" target="_blank">PART 3 — Scientific Foundations</a>
-  <a href="whitepapers/PART 4 — CRYPTOGRAPHIC ARCHITECTURE OF THE NOVAK PROTOCOL.pdf" target="_blank">PART 4 — Cryptographic Framework</a>
-  <a href="whitepapers/PART 5 — SYSTEM MODEL & EXECUTION FLOW.pdf" target="_blank">PART 5 — System Model</a>
-  <a href="whitepapers/PART 6 — IMPLEMENTATION LAYERS.pdf" target="_blank">PART 6 — Implementation Layers</a>
-  <a href="whitepapers/PART 7 — SECURITY MODEL & THREAT SURFACES.pdf" target="_blank">PART 7 — Security Model</a>
-  <a href="whitepapers/PART 8 — GOVERNANCE, COMPLIANCE & CROSS-JURISDICTIONAL ENFORCEMENT.pdf" target="_blank">PART 8 — Governance & Compliance</a>
-  <a href="whitepapers/PART 9 — FORMAL TECHNICAL WHITEPAPER.pdf" target="_blank">PART 9 — Formal Technical</a>
-  <a href="whitepapers/PART_10__Final_Summary.pdf" target="_blank">PART 10 — Final Summary</a>
+  <a href="docs/whitepapers/PART_1__Executive_Summary.pdf" target="_blank">PART 1 — Executive Summary</a>
+  <a href="docs/whitepapers/PART 2 — WHAT NOVAK IS.pdf" target="_blank">PART 2 — What NOVAK Is</a>
+  <a href="docs/whitepapers/PART 3 — SCIENTIFIC FOUNDATIONS OF THE NOVAK PROTOCOL.pdf" target="_blank">PART 3 — Scientific Foundations</a>
+  <a href="wdocs/hitepapers/PART 4 — CRYPTOGRAPHIC ARCHITECTURE OF THE NOVAK PROTOCOL.pdf" target="_blank">PART 4 — Cryptographic Framework</a>
+  <a href="docs/whitepapers/PART 5 — SYSTEM MODEL & EXECUTION FLOW.pdf" target="_blank">PART 5 — System Model</a>
+  <a href="docs/whitepapers/PART 6 — IMPLEMENTATION LAYERS.pdf" target="_blank">PART 6 — Implementation Layers</a>
+  <a href="docs/whitepapers/PART 7 — SECURITY MODEL & THREAT SURFACES.pdf" target="_blank">PART 7 — Security Model</a>
+  <a href="docs/whitepapers/PART 8 — GOVERNANCE, COMPLIANCE & CROSS-JURISDICTIONAL ENFORCEMENT.pdf" target="_blank">PART 8 — Governance & Compliance</a>
+  <a href="docs/whitepapers/PART 9 — FORMAL TECHNICAL WHITEPAPER.pdf" target="_blank">PART 9 — Formal Technical</a>
+  <a href="docs/whitepapers/PART_10__Final_Summary.pdf" target="_blank">PART 10 — Final Summary</a>
 
   <div class="dropdown-divider"></div>
 
   <div class="dropdown-header">Appendices</div>
-  <a href="whitepapers/Appendix_A_Glossary.pdf" target="_blank">Appendix A — Glossary</a>
-  <a href="whitepapers/Appendix_B_Math_Notation.pdf" target="_blank">Appendix B — Math Notation</a>
-  <a href="whitepapers/Appendix_C_Regulatory_Mapping.pdf" target="_blank">Appendix C — Regulatory Mapping</a>
-  <a href="whitepapers/Appendix_D_Threat_Model.pdf" target="_blank">Appendix D — Threat Model</a>
-  <a href="whitepapers/Appendix_E_Pitch_Deck.pdf" target="_blank">Appendix E — Pitch Deck</a>
+  <a href="docs/whitepapers/Appendix_A_Glossary.pdf" target="_blank">Appendix A — Glossary</a>
+  <a href="docs/whitepapers/Appendix_B_Math_Notation.pdf" target="_blank">Appendix B — Math Notation</a>
+  <a href="docs/whitepapers/Appendix_C_Regulatory_Mapping.pdf" target="_blank">Appendix C — Regulatory Mapping</a>
+  <a href="docs/whitepapers/Appendix_D_Threat_Model.pdf" target="_blank">Appendix D — Threat Model</a>
+  <a href="docs/whitepapers/Appendix_E_Pitch_Deck.pdf" target="_blank">Appendix E — Pitch Deck</a>
 
 </div>
 
