--- a/index.html
+++ b/index.html
@@ -600,11 +600,11 @@ html[data-theme="dark"] .aud-btn.active {
   <div class="dropdown-divider"></div>
 
   <div class="dropdown-header">Appendices</div>
-  <a href="docs/whitepapers/Appendix_A_Glossary.pdf" target="_blank">Appendix A — Glossary</a>
-  <a href="docs/whitepapers/Appendix_B_Math_Notation.pdf" target="_blank">Appendix B — Math Notation</a>
-  <a href="docs/whitepapers/Appendix_C_Regulatory_Mapping.pdf" target="_blank">Appendix C — Regulatory Mapping</a>
-  <a href="docs/whitepapers/Appendix_D_Threat_Model.pdf" target="_blank">Appendix D — Threat Model</a>
-  <a href="docs/whitepapers/Appendix_E_Pitch_Deck.pdf" target="_blank">Appendix E — Pitch Deck</a>
+  <a href="docs/apendices/apendices/Appendix A — Adversarial Prompt Library.pdf" target="_blank">Appendix A — Glossary</a>
+  <a href="docs/apendices/APPENDIX B GRADIENT-SPACE ADVERSARIAL SIMULATION VECTORS.pdf" target="_blank">Appendix B — Math Notation</a>
+  <a href="docs/apendices/APPENDIX C REGULATORY MAPPING.pdf" target="_blank">Appendix C — Regulatory Mapping</a>
+  <a href="docs/apendices/APPENDIX D THREAT MODEL AND SECUIRTY PROOF SKETCH.pdf" target="_blank">Appendix D — Threat Model</a>
+  <a href="docs/apendices/ppendix_E_Pitch_Deck.pdf" target="_blank">Appendix E — Pitch Deck</a>
 
 </div>
 
