--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@ html[data-theme="dark"] .aud-btn.active {
     <a href="docs/learning/NOVAK Learning Series - SP-2 Cryptographic Standard.pdf" target="_blank">NOVAK Learning Series - SP-2 Cryptographic Standard</a>
     <a href="docs/learning/NOVAK Learning Series - SP-3 Safety Gate Standard.pdf" target="_blank">NOVAK Learning Series - SP-3 Safety Gate Standard</a>
     <a href="docs/learning/NOVAK Learning Series - SP-4 Implementation Requirements.pdf" target="_blank">NOVAK Learning Series - SP-4 Implementation Requirements</a>
+    <a href="docs/learning/NOVAK Learning Series - SP-5 Certification Standard.pdf" target="_blank">NOVAK Learning Series - SP-5 Certification Standard</a>
     <a href="docs/learning/NOVAK Learning Series - SP-6 Conformance Testing.pdf" target="_blank">NOVAK Learning Series - SP-6 Conformance Testing</a>
     <a href="docs/learning/NOVAK Learning Series - SP-7 Federal Adoption.pdf" target="_blank">NOVAK Learning Series - SP-7 Federal Adoption</a>
     <a href="docs/learning/NOVAK Learning Series - SP-8 Interoperability Standard.pdf" target="_blank">NOVAK Learning Series - SP-8 Interoperability Standard</a>
@@ -657,6 +658,7 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-header">NOVAK Learning Series - LAWS</div>
 
+    <a href="docs/learning/NOVAK Learning Series - NOVAK Law L0 The Prime Directive.pdf" target="_blank">NOVAK Learning Series - NOVAK Law L0 The Prime Directive (Zeroth Law)</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L1 Deterministic Rule Execution.pdf" target="_blank">NOVAK Learning Series - NOVAK Law L1 Deterministic Rule Execution</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L2 Rule Hash.pdf" target="_blank">NOVAK Learning Series - NOVAK Law L2 Rule Hash</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Law L3 Data Hash.pdf" target="_blank">NOVAK Learning Series - NOVAK Law L3 Data Hash</a>
@@ -679,7 +681,15 @@ html[data-theme="dark"] .aud-btn.active {
 
     <div class="dropdown-divider"></div>
 
-    <div class="dropdown-header">NOVAK Learning Series - LAWS Addenda</div>
+    <div class="dropdown-header">NOVAK Learning Series - Threat Models</div>
+
+    <a href="docs/learning/NOVAK Learning Series - Industry Addenda PL-X & PS-X.pdf" target="_blank">NOVAK Learning Series - Industry Addenda PL-X & PS-X</a>
+    <a href="docs/learning/NOVAK Learning Series - Industry Addenda PL-X & PS-X.pdf" target="_blank">NOVAK Learning Series - Industry Addenda PL-X & PS-X</a>
+    <a href="docs/learning/NOVAK Learning Series - Industry Addenda PL-X & PS-X.pdf" target="_blank">NOVAK Learning Series - Industry Addenda PL-X & PS-X</a>
+
+    <div class="dropdown-divider"></div>
+
+    <div class="dropdown-header">NOVAK Learning Series - Novak Overview</div>
 
     <a href="docs/learning/NOVAK Learning Series - NOVAK Part 1 Executive Summary.pdf" target="_blank">NOVAK Learning Series - NOVAK Part 1 Executive Summary</a>
     <a href="docs/learning/NOVAK Learning Series - NOVAK Part 2 - What Novak Is.pdf" target="_blank">NOVAK Learning Series - NOVAK Part 2 - What Novak Is</a>
